--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m a Husband and Father from Salem, OR. I attended Chemeketa Community College to get my degree in Computer Information Systems  I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’m a stay at home dad so i have a lot of time for schooling and thought now is the time to go back and learn.</p>
+        <p>I’m a Husband and Father from Salem, OR. I attended Chemeketa Community College to get my degree in Computer Information Systems with a Web Developer Certificate. I’m currently a stay at home dad so I have a lot of time for schooling and thought now is the time to go back and learn.</p>
+        <p>With all the knowledge I've gathered I look forward to making amazing websites.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to sharpen my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -39,7 +39,7 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>My goal is to become a freelance Web Designer with the skills to make amazing sites for my clients.</p>
       </div> 
 
     </main>
