experience file and updates to index

--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Justin Burris' Profile</title>
+  <title>Justin Burris' Experience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -24,24 +24,17 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-          <p>I’m a Husband and Father from Salem, OR. I've been married for five years now and my son just turned one! I’m currently a stay at home dad so I have a lot of time for schooling and thought now is the time to go back and learn. </p>
-          <p>I will be attending DeVry University in the summer to get my Bachelor's Degree in Web and Mobile Application Development.</p>
-        
+        <h2>Experience</h2>
+          <p> I have been coding for more than ten years now. I started back in middle school with the basic web class even has to take and fell in love with it. I became part of the Sprague High School Web Team where we actually ran the schools webiste. </p>
+          <p>Since then I've taken every web class my high school had to offer and attended Chemeketa Community College to get my Associate Degree in Computer Information Systems with a Web Developer Certifcate.</p>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I want to sharpen my knowledge, skills and abilities in:</p>
-        <img class="logos" src="images/logos.png" alt="HTML 5, CSS3, JavaScript, Ruby Rails">
-        <!-- <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
-        </ul> -->
-        <p>My goal is to become a freelance Web Designer with the skills to make amazing sites for my clients.</p>
+        <h2>Awards &amp; Achievements</h2>
+        <ul class="skills">
+          <li>Most Outstanding in Computer Programming at Sprague High School, 2013</li>
+          <li>Sprague High School Web Team, 2012-2013</li>
+        </ul>
       </div> 
 
     </main>
