style changes and award update

--- a/experience.html
+++ b/experience.html
@@ -1,50 +1,55 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Justin Burris' Experience</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+    <meta charset="utf-8">
+    <title>Justin Burris' Experience</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+</head>
+
+<body>
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Justin Burris</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+            <li class="name">Justin Burris</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/profile_pic.jpg" alt="Photo of Justin and his son" class="profile-image">
-      <h1 class="tag name">Hello, I’m Justin.</h1>
-      <p class="tag location">My home is Salem, Oregon.</p>
+        <img src="images/profile_pic.jpg" alt="Photo of Justin and his son" class="profile-image">
+        <h1 class="tag name">Hello, I’m Justin.</h1>
+        <p class="tag location">My home is Salem, Oregon.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
-        <h2>Experience</h2>
-          <p> I have been coding for more than ten years now. I started back in middle school with the basic web class even has to take and fell in love with it. I became part of the Sprague High School Web Team where we actually ran the schools webiste. </p>
-          <p>Since then I've taken every web class my high school had to offer and attended Chemeketa Community College to get my Associate Degree in Computer Information Systems with a Web Developer Certifcate.</p>
-      </div> 
+        <div class="card">
+            <h2>Experience</h2>
+            <p> I have been coding for more than ten years now. I started back in middle school with the basic web class even has to take and fell in love with it. I became part of the Sprague High School Web Team where we actually ran the schools webiste. </p>
+            <p>Since then I've taken every web class my high school had to offer and attended Chemeketa Community College to get my Associate Degree in Computer Information Systems with a Web Developer Certifcate.</p>
+        </div>
 
-      <div class="card">
-        <h2>Awards &amp; Achievements</h2>
-        <ul class="skills">
-          <li>Most Outstanding in Computer Programming at Sprague High School, 2013</li>
-          <li>Sprague High School Web Team, 2012-2013</li>
-        </ul>
-      </div> 
-
+        <div class="card">
+            <h2>Awards &amp; Achievements</h2>
+            <ul class="skills">
+                <li>Most Outstanding in Computer Programming at Sprague High School, 2013</li>
+                <li>Sprague High School Web Team, 2012-2013</li>
+                <li>Microsoft Data Management Certificate, 2016</li>
+            </ul>
+        </div>
     </main>
+
     <footer>
-      <ul>
-        <li><a href="https://twitter.com/imjustburris" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/justin-burris-2a28411a9/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/JustinBurris" class="social github">Github</a></li>
-      </ul>
-      <p class="copyright">Copyright 2020, Justin Burris</p>
+        <ul>
+            <li><a href="https://twitter.com/imjustburris" class="social twitter">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/justin-burris-2a28411a9/" class="social linkedin">LinkedIn</a></li>
+            <li><a href="https://github.com/JustinBurris" class="social github">Github</a></li>
+        </ul>
+        <p class="copyright">Copyright 2020, Justin Burris</p>
     </footer>
-  </body>
-  </html>
+</body>
+
+</html>
