--- a/index.html
+++ b/index.html
@@ -1,57 +1,61 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Justin Burris' Profile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+    <meta charset="utf-8">
+    <title>Justin Burris' Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+</head>
+
+<body>
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Justin Burris</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+            <li class="name">Justin Burris</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/profile_pic.jpg" alt="Photo of Justin and his son" class="profile-image">
-      <h1 class="tag name">Hello, I’m Justin.</h1>
-      <p class="tag location">My home is Salem, Oregon.</p>
+        <img src="images/profile_pic.jpg" alt="Photo of Justin and his son" class="profile-image">
+        <h1 class="tag name">Hello, I’m Justin.</h1>
+        <p class="tag location">My home is Salem, Oregon.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
-          <p>I’m a Husband and Father from Salem, OR. I've been married for five years now and my son just turned one! I’m currently a stay at home dad so I have a lot of time for schooling and thought now is the time to go back and learn. </p>
-          <p>I will be attending DeVry University in the summer to get my Bachelor's Degree in Web and Mobile Application Development.</p>
-        
-      </div> 
+        <div class="card">
+            <h2>Background</h2>
+            <p>I’m a Husband and Father from Salem, OR. I've been married for five years now and my son just turned one! I’m currently a stay at home dad so I have a lot of time for schooling and thought now is the time to go back and learn. </p>
+            <p>I will be attending DeVry University in the summer to get my Bachelor's Degree in Web and Mobile Application Development.</p>
 
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to sharpen my knowledge, skills and abilities in:</p>
-        <img class="logos" src="images/logos.png" alt="HTML 5, CSS3, JavaScript, Ruby Rails">
-        <!-- <ul class="skills">
+        </div>
+
+        <div class="card">
+            <h2>Goals</h2>
+            <p>I want to sharpen my knowledge, skills and abilities in:</p>
+            <img class="logos" src="images/logos.png" alt="HTML 5, CSS3, JavaScript, Ruby Rails">
+            <!-- <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
           <li>Ruby</li>
           <li>Rails</li>
         </ul> -->
-        <p>My goal is to become a freelance Web Designer with the skills to make amazing sites for my clients.</p>
-      </div> 
+            <p>My goal is to become a freelance Web Designer with the skills to make amazing sites for my clients.</p>
+        </div>
 
     </main>
     <footer>
-      <ul>
-        <li><a href="https://twitter.com/imjustburris" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/justin-burris-2a28411a9/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/JustinBurris" class="social github">Github</a></li>
-      </ul>
-      <p class="copyright">Copyright 2020, Justin Burris</p>
+        <ul>
+            <li><a href="https://twitter.com/imjustburris" class="social twitter">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/justin-burris-2a28411a9/" class="social linkedin">LinkedIn</a></li>
+            <li><a href="https://github.com/JustinBurris" class="social github">Github</a></li>
+        </ul>
+        <p class="copyright">Copyright 2020, Justin Burris</p>
     </footer>
-  </body>
-  </html>
+</body>
+
+</html>
